--- a/.classpath
+++ b/.classpath
@@ -34,5 +34,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Robbie/.m2/repository/org/bukkit/bukkit/1.14.4-R0.1-SNAPSHOT/spigot-1.14.4.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
